<resources>
    <string name="app_name">哔哩哔哩•伪</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="category_banner_advertisement">广告</string>
    <string name="home_top_default_nickname">未登录</string>
    <string name="logout">注销</string>
    <string name="main_page_attentions">关注</string>
    <string name="main_page_bangumi">番剧</string>
    <string name="main_page_category">分区</string>
    <string name="main_page_discover">发现</string>
    <string name="main_page_game">游戏</string>
    <string name="main_page_home">推荐</string>
    <string name="main_page_live">直播</string>
    <string name="main_page_my_center">我的</string>
    <string name="menu_top_download_tips">离线列表</string>
    <string name="menu_top_search_tips">搜索</string>
    <string name="mycenter_coin_text">硬币：%s</string>
    <string name="nav_favorites">我的收藏</string>
    <string name="nav_following">我的关注</string>
    <string name="nav_histories">历史记录</string>
    <string name="nav_home">首页</string>
    <string name="nav_login_click_avatar">点击头像登录</string>
    <string name="nav_notifications">我的消息</string>
    <string name="nav_offline_manager">离线缓存</string>
    <string name="nav_pay">我的钱包</string>
    <string name="nav_settings">设置与帮助</string>
    <string name="pref_category_title_danmaku_style">弹幕选项</string>
    <string name="pref_screen_summary_advanced">建议在开发者指导下修改</string>
    <string name="pref_screen_title_advanced">调试设置</string>
    <string name="pref_summaryOff_DFM_HardwareAcc">默认绘制模式</string>
    <string name="pref_summaryOn_DFM_HardwareAcc">硬件加速支持 4.0+ 系统，更省电更流畅</string>
    <string name="pref_summary_aoutOpenSLES">只要播放器还有声音，就不要开这个设置</string>
    <string name="pref_summary_app_version_fmt">当前版本：%s</string>
    <string name="pref_summary_danmaku_Monospaced">针对英文字体优化效果</string>
    <string name="pref_summary_danmaku_engine_auto">自动选择（推荐）</string>
    <string name="pref_summary_danmaku_engine_dfm">烈焰弹幕使 [Danmaku Flame Master]</string>
    <string name="pref_summary_danmaku_engine_dfm_plus">超·烈焰弹幕使 [Danmaku Flame Master]</string>
    <string name="pref_summary_danmaku_engine_dfm_sr">+ StupidRenderer</string>
    <string name="pref_summary_danmaku_engine_v1">传统弹幕引擎</string>
    <string name="pref_summary_danmaku_hide_by_default">你确定？</string>
    <string name="pref_summary_danmaku_max_on_screen_auto">自动(默认)</string>
    <string name="pref_summary_danmaku_max_on_screen_few">少</string>
    <string name="pref_summary_danmaku_max_on_screen_many">多</string>
    <string name="pref_summary_danmaku_max_on_screen_normal">通常</string>
    <string name="pref_summary_danmaku_max_on_screen_unlimited">无限弹幕制</string>
    <string name="pref_summary_danmaku_style_bold">部分字体无效或导致弹幕卡顿</string>
    <string name="pref_summary_danmaku_text_auto">自动选择</string>
    <string name="pref_summary_danmaku_text_none">普通（最快）</string>
    <string name="pref_summary_danmaku_text_projection">45°投影（实验性）</string>
    <string name="pref_summary_danmaku_text_shadow">阴影（推荐）</string>
    <string name="pref_summary_danmaku_text_thick_stroke">描边（最好）</string>
    <string name="pref_summary_disable_push">会错过有意思的内容哦</string>
    <string name="pref_summary_disable_splash">直接进入主界面</string>
    <string name="pref_summary_download_custom_folder">自定义目录</string>
    <string name="pref_summary_download_enable_auto_start">自动开始未完成的下载任务</string>
    <string name="pref_summary_download_enable_non_wifi">允许通过需要付费的移动网络下载</string>
    <string name="pref_summary_download_storage_primary_external">主存储</string>
    <string name="pref_summary_download_storage_secondary_external">副存储</string>
    <string name="pref_summary_hide_navigation">隐藏播放界面的虚拟键</string>
    <string name="pref_summary_joinus">遵从中二力量的召唤，和我签订契约吧！少年</string>
    <string name="pref_summary_preferences">设置</string>
    <string name="pref_summary_resolve_bili_cdn_play">非海外用户大概会减速吧</string>
    <string name="pref_summary_screen_codecPref">解码设置</string>
    <string name="pref_summary_screen_danmakuPref">弹幕设置</string>
    <string name="pref_summary_screen_downloadPref">离线设置</string>
    <string name="pref_title_DFM_HardwareAcc">DFM 弹幕硬件加速渲染</string>
    <string name="pref_title_VoutViewType">视频输出方式</string>
    <string name="pref_title_about">关于</string>
    <string name="pref_title_aoutOpenSLES">OpenSL ES</string>
    <string name="pref_title_category_advanced">高级</string>
    <string name="pref_title_category_aout">音频输出</string>
    <string name="pref_title_category_codecMode">解码模式选择</string>
    <string name="pref_title_category_misc">其它</string>
    <string name="pref_title_category_play">播放</string>
    <string name="pref_title_category_swConfig">软件解码设置</string>
    <string name="pref_title_category_vout">视频输出</string>
    <string name="pref_title_check_update">检查更新</string>
    <string name="pref_title_choose_danmaku_engine">弹幕引擎选择</string>
    <string name="pref_title_clearImage">清空图片缓存</string>
    <string name="pref_title_clearSearchHistory">清空搜索记录</string>
    <string name="pref_title_completeAction">播放完成后动作</string>
    <string name="pref_title_cpu_info">CPU 信息</string>
    <string name="pref_title_danmaku_Monospaced">使用等宽字体</string>
    <string name="pref_title_danmaku_block_bottom">屏蔽底端弹幕</string>
    <string name="pref_title_danmaku_block_mode">屏蔽模式</string>
    <string name="pref_title_danmaku_block_settings">关键词 / 用户屏蔽</string>
    <string name="pref_title_danmaku_block_top">屏蔽顶端弹幕</string>
    <string name="pref_title_danmaku_engine_settings">弹幕引擎</string>
    <string name="pref_title_danmaku_hide_by_default">默认隐藏弹幕</string>
    <string name="pref_title_danmaku_max_on_screen">同屏弹幕密度</string>
    <string name="pref_title_danmaku_style_bold">开启粗体</string>
    <string name="pref_title_danmaku_text_style">弹幕边框样式</string>
    <string name="pref_title_diagnostics">网络诊断</string>
    <string name="pref_title_disable_push">不接收推送消息</string>
    <string name="pref_title_disable_splash">禁用启动动画</string>
    <string name="pref_title_download_enable_auto_start">自动下载</string>
    <string name="pref_title_download_enable_non_wifi">启用2G/3G/4G网络下载</string>
    <string name="pref_title_download_networkOption">网络设置</string>
    <string name="pref_title_download_offline_diagnose">离线诊断</string>
    <string name="pref_title_download_storage">下载位置</string>
    <string name="pref_title_download_tools">离线工具</string>
    <string name="pref_title_feed_back">反馈</string>
    <string name="pref_title_ffmpegSkipLoopFilter">跳过循环滤波 (loop-filter)</string>
    <string name="pref_title_help_preferences">帮助</string>
    <string name="pref_title_hide_navigation">全屏播放</string>
    <string name="pref_title_joinus">加入我们</string>
    <string name="pref_title_license">开放源代码许可</string>
    <string name="pref_title_mediaSource">清晰度选择</string>
    <string name="pref_title_preferences">设置</string>
    <string name="pref_title_resetPreferences">恢复初始设置</string>
    <string name="pref_title_resolve_bili_cdn_play">海外视频加速</string>
    <string name="pref_title_screen_codecPref">解码设置</string>
    <string name="pref_title_screen_danmakuPref">弹幕设置</string>
    <string name="pref_title_screen_downloadPref">离线设置</string>
    <string name="search_hint">搜索视频,番剧,up主或av号</string>
    <string name="search_offline_hint">搜索离线视频,番剧或av号</string>
    <string name="title_game">游戏中心</string>
    <string name="title_theme_store">主题选择</string>
    <string name="play_pause_tv_scale_land">1.3</string>
    <string name="play_pause_tv_scale_vertical">1.0</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ACD_BufferingView">ACD_BufferingView</string>
    <string name="ACD_ControllerRoot">ACD_ControllerRoot</string>
    <string name="ACD_ControllerView">ACD_ControllerView</string>
    <string name="ACD_DanmakuInputView">ACD_DanmakuInputView</string>
    <string name="ACD_DanmakuView">ACD_DanmakuView</string>
    <string name="ACD_LockView">ACD_LockView</string>
    <string name="ACD_PreloadingView">ACD_PreloadingView</string>
    <string name="ACD_Underlay">ACD_Underlay</string>
    <string name="ACD_VideoRoot">ACD_VideoRoot</string>
    <string name="ACD_VideoView">ACD_VideoView</string>
    <string name="DanmakuPlayer_danmaku_engine">弹幕引擎</string>
    <string name="Mobile_3gnet">联通3gnet</string>
    <string name="Mobile_3gnet_f">联通</string>
    <string name="Mobile_3gwap">联通3gwap</string>
    <string name="Mobile_3gwap_f">联通</string>
    <string name="Mobile_cmnet">移动cmnet</string>
    <string name="Mobile_cmnet_f">移动</string>
    <string name="Mobile_cmwap">移动cmwap</string>
    <string name="Mobile_cmwap_f">移动</string>
    <string name="Mobile_ctnet">电信ctnet</string>
    <string name="Mobile_ctnet_f">电信</string>
    <string name="Mobile_ctwap">电信ctwap</string>
    <string name="Mobile_ctwap_f">电信</string>
    <string name="Mobile_uninet">联通uninet</string>
    <string name="Mobile_uninet_f">联通</string>
    <string name="Mobile_uniwap">联通uniwap</string>
    <string name="Mobile_uniwap_f">联通</string>
    <string name="PlayMode_android_player_hw">v1 HW</string>
    <string name="PlayerBreakPoint_continue_play">跳转播放</string>
    <string name="PlayerBreakPoint_restart_play">重新开始</string>
    <string name="PlayerBreakPoint_resume_break_poing_fmt1">要从上次中断的位置(%s)继续播放吗?</string>
    <string name="PlayerBreakPoint_resume_break_poing_fmt2">记忆您上次播放到 %s</string>
    <string name="PlayerBreakPoint_resume_break_poing_fmt3">发现正片位置 %s</string>
    <string name="PlayerChargeTips_buy_vip_now">立即开通</string>
    <string name="PlayerChargeTips_need_charge_1">正在播放前6分钟，付费即可观赏全片 ~</string>
    <string name="PlayerChargeTips_need_charge_2">正在播放前6分钟，付费即可观赏全片 〉</string>
    <string name="PlayerChargeTips_pay_now">立即观看</string>
    <string name="PlayerChargeTips_preview_finish">开通大会员即可免费观看全片</string>
    <string name="PlayerChargeTips_preview_finish_vip">"6分钟试看已播放完毕，
付费即可开启全片"</string>
    <string name="PlayerController_tips_lock_player">锁屏</string>
    <string name="PlayerController_tips_media_quality_high">高清</string>
    <string name="PlayerController_tips_send_danmaku">发射弹幕</string>
    <string name="PlayerController_tips_toggle_aspect_ratio">视频比例</string>
    <string name="PlayerController_tips_toggle_danmaku_close">弹幕关</string>
    <string name="PlayerController_tips_toggle_danmaku_open">弹幕开</string>
    <string name="PlayerController_toast_message_aspect_ratio_16_9_inside">16 : 9</string>
    <string name="animotion">动画</string>
    <string name="bangumi_header">番剧</string>
    <string name="live">直播</string>
</resources>