<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <View
        android:background="@drawable/nico_shape_xxxxxxxxxxxxxxxxxxxx"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TableRow
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:drawableTop="@mipmap/ic_category_live"
            android:drawablePadding="0dp"
            android:text="@string/live"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t13"
            android:drawablePadding="0dp"
            android:text="@string/bangumi_header"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t1"
            android:drawablePadding="0dp"
            android:text="@string/animotion"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:drawableTop="@mipmap/ic_category_t3"
            android:drawablePadding="0dp"
            android:text="音乐"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t129"
            android:drawablePadding="0dp"
            android:text="舞蹈"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t4"
            android:drawablePadding="0dp"
            android:text="游戏"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:drawableTop="@mipmap/ic_category_t36"
            android:drawablePadding="0dp"
            android:text="科技"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t162"
            android:drawablePadding="0dp"
            android:text="生活"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t119"
            android:drawablePadding="0dp"
            android:text="鬼畜"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:drawableTop="@mipmap/ic_category_t155"
            android:drawablePadding="0dp"
            android:text="时尚"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t165"
            android:drawablePadding="0dp"
            android:text="广告"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t5"
            android:drawablePadding="0dp"
            android:text="娱乐"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:drawableTop="@mipmap/ic_category_t23"
            android:drawablePadding="0dp"
            android:text="电影"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:drawableTop="@mipmap/ic_category_t11"
            android:drawablePadding="0dp"
            android:text="电视剧"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:text=""
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>
</LinearLayout>